apps/base/nextcloud/deployment.yaml
#
# Reference:
# https://github.com/docker-library/docs/blob/master/nextcloud/README.md
# https://docs.nextcloud.com/server/latest/admin_manual/contents.html
# https://github.com/pulsejet/nextcloud-oidc-login
#

apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: nextcloud
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: nextcloud
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-exporter
  namespace: nextcloud
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: nextcloud-exporter
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: nextcloud
  ports:
    - name: metrics
      port: 9205
      targetPort: metrics
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:stable-apache
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 150Mi
            limits:
              cpu: 2000m
              memory: 750Mi
          volumeMounts:
            - name: nextcloud-storage
              mountPath: /var/www/html
        - name: nextcloud-exporter
          image: ghcr.io/xperimental/nextcloud-exporter:0.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9205
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 150Mi
            limits:
              cpu: 150m
              memory: 250Mi
      restartPolicy: Always
      volumes:
        - name: nextcloud-storage
          persistentVolumeClaim:
            claimName: nextcloud-pvc
