apps/base/nextcloud/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-dashboard-https
  namespace: nextcloud
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: nextcloud-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.saldivar.io`)
      kind: Rule
      services:
        - name: nextcloud
          port: http
      middlewares:
        - name: nextcloud-headers-middleware
          namespace: nextcloud
        - name: nextcloud-redirect-middleware
          namespace: nextcloud
        - name: security
          namespace: kube-system
